sumo/tests/dfrouter/detector_types/errors/testsuite.dfrouter

# Tests what happens when the detectors-output is false
detectors_output_false


